[ADD] - Coin changer, some stuff

--- a/src/client/game/index.html
+++ b/src/client/game/index.html
@@ -9,9 +9,9 @@
     <title>Game - Power4Web</title>
   </head>
   <body>
-    <div class="noselect leaderboard">
+    <div class="leaderboard noselect">
       <div class="leaderboard__player">
-        <div class="slot slot__red"></div>
+        <div class="slot slot__{{(index .Players 0).Slot}}"></div>
         {{if not .Leaderboard}}
         <p>-</p>
         {{else}} {{range $score := .Leaderboard}} {{if eq $score.Player 1}} {{if
@@ -25,7 +25,7 @@
       </div>
       <div class="leaderboard__separator"></div>
       <div class="leaderboard__player">
-        <div class="slot slot__yellow"></div>
+        <div class="slot slot__{{(index .Players 1).Slot}}"></div>
         {{if not .Leaderboard}}
         <p>-</p>
         {{else}} {{range $score := .Leaderboard}} {{if eq $score.Player 2}} {{if
@@ -39,18 +39,41 @@
       </div>
     </div>
 
+    <!-- If there's a win -->
     {{if .Win.IsWin}}
-    <div class="popup noselect">
+    <div class="popup noselect win">
       {{if eq .Win.Winner 1}}
-      <div class="slot slot__big slot__red win__anim"></div>
+      <div
+        class="slot slot__big slot__{{(index .Players 0).Slot}} appear__anim"
+      ></div>
       {{end}} {{if eq .Win.Winner 2}}
-      <div class="slot slot__big slot__yellow win__anim"></div>
+      <div
+        class="slot slot__big slot__{{(index .Players 1).Slot}} appear__anim"
+      ></div>
       {{end}}
-      <h1 class="win__anim">Gagne !</h1>
+      <h1 class="appear__anim">Gagne !</h1>
 
-      <form action="/newgame" method="post">
+      <form action="/newGame" method="post">
         <button
-          class="btn btn--white win__anim--btn"
+          class="btn btn--white appear__anim--btn"
+          name="newgame_btn"
+          value=""
+          type="submit"
+        >
+          Relancer une partie
+        </button>
+      </form>
+    </div>
+    {{end}}
+
+    <!-- If there's a draw -->
+    {{if .Win.IsDraw}}
+    <div class="popup noselect">
+      <h1 class="appear__anim">Match nul, dommage !</h1>
+
+      <form action="/newGame" method="post">
+        <button
+          class="btn btn--white appear__anim--btn"
           name="newgame_btn"
           value=""
           type="submit"
@@ -62,121 +85,68 @@
     {{end}}
 
     <h1>{{.Title}}</h1>
-    <div class="game">
+    <div class="game noselect">
       {{if eq .PlayerToPlay 1}}
-      <div class="slot slot__big slot__red"></div>
+      <div class="slot slot__big slot__{{(index .Players 0).Slot}}"></div>
       {{end}} {{if eq .PlayerToPlay 2}}
-      <div class="slot slot__big slot__yellow"></div>
+      <div class="slot slot__big slot__{{(index .Players 1).Slot}}"></div>
       {{end}}
-      <div class="game__actions">
-        <form action="/placeLine" method="post">
-          {{if index .IsLineFull 0}}
-          <button class="btn btn--black btn__disabled" disabled>1</button>
-          {{else}}
-          <button
-            class="btn btn--black"
-            name="line_btn"
-            value="1"
-            type="submit"
-          >
-            1
-          </button>
-          {{end}}
-        </form>
-        <form action="/placeLine" method="post">
-          {{if index .IsLineFull 1}}
-          <button class="btn btn--black btn__disabled" disabled>2</button>
-          {{else}}
-          <button
-            class="btn btn--black"
-            name="line_btn"
-            value="2"
-            type="submit"
-          >
-            2
-          </button>
-          {{end}}
-        </form>
-        <form action="/placeLine" method="post">
-          {{if index .IsLineFull 2}}
-          <button class="btn btn--black btn__disabled" disabled>3</button>
-          {{else}}
-          <button
-            class="btn btn--black"
-            name="line_btn"
-            value="3"
-            type="submit"
-          >
-            3
-          </button>
-          {{end}}
-        </form>
-        <form action="/placeLine" method="post">
-          {{if index .IsLineFull 3}}
-          <button class="btn btn--black btn__disabled" disabled>4</button>
-          {{else}}
-          <button
-            class="btn btn--black"
-            name="line_btn"
-            value="4"
-            type="submit"
-          >
-            4
-          </button>
-          {{end}}
-        </form>
-        <form action="/placeLine" method="post">
-          {{if index .IsLineFull 4}}
-          <button class="btn btn--black btn__disabled" disabled>5</button>
-          {{else}}
-          <button
-            class="btn btn--black"
-            name="line_btn"
-            value="5"
-            type="submit"
-          >
-            5
-          </button>
-          {{end}}
-        </form>
-        <form action="/placeLine" method="post">
-          {{if index .IsLineFull 5}}
-          <button class="btn btn--black btn__disabled" disabled>6</button>
-          {{else}}
-          <button
-            class="btn btn--black"
-            name="line_btn"
-            value="6"
-            type="submit"
-          >
-            6
-          </button>
-          {{end}}
-        </form>
-        <form action="/placeLine" method="post">
-          {{if index .IsLineFull 6}}
-          <button class="btn btn--black btn__disabled" disabled>7</button>
-          {{else}}
-          <button
-            class="btn btn--black"
-            name="line_btn"
-            value="7"
-            type="submit"
-          >
-            7
-          </button>
-          {{end}}
-        </form>
-      </div>
+
+      <form class="game__actions" action="/placeLine" method="post">
+        {{if index .IsLineFull 0}}
+        <button class="btn btn--black btn__disabled" disabled>1</button>
+        {{else}}
+        <button class="btn btn--black" name="line_btn" value="1" type="submit">
+          1
+        </button>
+        {{end}} {{if index .IsLineFull 1}}
+        <button class="btn btn--black btn__disabled" disabled>2</button>
+        {{else}}
+        <button class="btn btn--black" name="line_btn" value="2" type="submit">
+          2
+        </button>
+        {{end}} {{if index .IsLineFull 2}}
+        <button class="btn btn--black btn__disabled" disabled>3</button>
+        {{else}}
+        <button class="btn btn--black" name="line_btn" value="3" type="submit">
+          3
+        </button>
+        {{end}} {{if index .IsLineFull 3}}
+        <button class="btn btn--black btn__disabled" disabled>4</button>
+        {{else}}
+        <button class="btn btn--black" name="line_btn" value="4" type="submit">
+          4
+        </button>
+        {{end}} {{if index .IsLineFull 4}}
+        <button class="btn btn--black btn__disabled" disabled>5</button>
+        {{else}}
+        <button class="btn btn--black" name="line_btn" value="5" type="submit">
+          5
+        </button>
+        {{end}} {{if index .IsLineFull 5}}
+        <button class="btn btn--black btn__disabled" disabled>6</button>
+        {{else}}
+        <button class="btn btn--black" name="line_btn" value="6" type="submit">
+          6
+        </button>
+        {{end}} {{if index .IsLineFull 6}}
+        <button class="btn btn--black btn__disabled" disabled>7</button>
+        {{else}}
+        <button class="btn btn--black" name="line_btn" value="7" type="submit">
+          7
+        </button>
+        {{end}}
+      </form>
+
       <div class="game__content">
         {{range $row := .Rows}}
         <div class="slots">
           {{range $item := $row}} {{if eq $item.Player 0}}
           <div class="slot slot__empty"></div>
           {{end}} {{if eq $item.Player 1}}
-          <div class="slot slot__red"></div>
+          <div class="slot slot__{{(index $.Players 0).Slot}}"></div>
           {{end}} {{if eq $item.Player 2}}
-          <div class="slot slot__yellow"></div>
+          <div class="slot slot__{{(index $.Players 1).Slot}}"></div>
           {{end}} {{end}}
         </div>
         {{end}}
