[FIX] - FIxed the UI a lil

--- a/src/client/game/index.html
+++ b/src/client/game/index.html
@@ -151,6 +151,8 @@
         </div>
         {{end}}
       </div>
+
+      <a class="btn btn--white" href="/">Revenir au menu</a>
     </div>
   </body>
 </html>
