[FIX] - New design for game coin and fixed bug for when winned you can add 99999+ wins

--- a/src/client/game/index.html
+++ b/src/client/game/index.html
@@ -1,158 +1,273 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/style.css" />
-    <link rel="stylesheet" href="/public/game/style.css" />
-    <script src="/public/game/script.js" defer></script>
-    <title>Game - Power4Web</title>
-  </head>
-  <body>
-    <div class="leaderboard noselect">
-      <div class="leaderboard__player">
-        <div class="slot slot__{{(index .Players 0).Slot}}"></div>
-        {{if not .Leaderboard}}
-        <p>-</p>
-        {{else}} {{range $score := .Leaderboard}} {{if eq $score.Player 1}} {{if
-        $score.IsWinner}}
-        <p>1</p>
-        {{else}}
-        <p>0</p>
-        {{end}} {{else}}
-        <p>0</p>
-        {{end}} {{end}} {{end}}
-      </div>
-      <div class="leaderboard__separator"></div>
-      <div class="leaderboard__player">
-        <div class="slot slot__{{(index .Players 1).Slot}}"></div>
-        {{if not .Leaderboard}}
-        <p>-</p>
-        {{else}} {{range $score := .Leaderboard}} {{if eq $score.Player 2}} {{if
-        $score.IsWinner}}
-        <p>1</p>
-        {{else}}
-        <p>0</p>
-        {{end}} {{else}}
-        <p>0</p>
-        {{end}} {{end}} {{end}}
-      </div>
-    </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/public/style.css" />
+        <link rel="stylesheet" href="/public/game/style.css" />
+        <script src="/public/game/script.js" defer></script>
+        <title>Game - Power4Web</title>
+    </head>
+    <body>
+        <div class="leaderboard noselect">
+            <div class="leaderboard__player">
+                <div class="slot slot__{{(index .Players 0).Slot}}"></div>
+                {{if not .Leaderboard}}
+                <p>-</p>
+                {{else}} {{range $score := .Leaderboard}} {{if eq $score.Player
+                1}} {{if $score.IsWinner}}
+                <p>1</p>
+                {{else}}
+                <p>0</p>
+                {{end}} {{else}}
+                <p>0</p>
+                {{end}} {{end}} {{end}}
+            </div>
+            <div class="leaderboard__separator"></div>
+            <div class="leaderboard__player">
+                <div class="slot slot__{{(index .Players 1).Slot}}"></div>
+                {{if not .Leaderboard}}
+                <p>-</p>
+                {{else}} {{range $score := .Leaderboard}} {{if eq $score.Player
+                2}} {{if $score.IsWinner}}
+                <p>1</p>
+                {{else}}
+                <p>0</p>
+                {{end}} {{else}}
+                <p>0</p>
+                {{end}} {{end}} {{end}}
+            </div>
+        </div>
 
-    <!-- If there's a win -->
-    {{if .Win.IsWin}}
-    <div class="popup noselect win">
-      {{if eq .Win.Winner 1}}
-      <div
-        class="slot slot__big slot__{{(index .Players 0).Slot}} appear__anim"
-      ></div>
-      {{end}} {{if eq .Win.Winner 2}}
-      <div
-        class="slot slot__big slot__{{(index .Players 1).Slot}} appear__anim"
-      ></div>
-      {{end}}
-      <h1 class="appear__anim">Gagne !</h1>
+        <!-- If there's a win -->
+        {{if .Win.IsWin}}
+        <div class="popup noselect win">
+            {{if eq .Win.Winner 1}}
+            <div
+                class="slot slot__big slot__{{(index .Players 0).Slot}} appear__anim"
+            ></div>
+            {{end}} {{if eq .Win.Winner 2}}
+            <div
+                class="slot slot__big slot__{{(index .Players 1).Slot}} appear__anim"
+            ></div>
+            {{end}}
+            <h1 class="appear__anim">Gagne !</h1>
 
-      <form action="/newGame" method="post">
-        <button
-          class="btn btn--white appear__anim--btn"
-          name="newgame_btn"
-          value=""
-          type="submit"
-        >
-          Relancer une partie
-        </button>
-      </form>
-    </div>
-    {{end}}
-
-    <!-- If there's a draw -->
-    {{if .Win.IsDraw}}
-    <div class="popup noselect">
-      <h1 class="appear__anim">Match nul, dommage !</h1>
-
-      <form action="/newGame" method="post">
-        <button
-          class="btn btn--white appear__anim--btn"
-          name="newgame_btn"
-          value=""
-          type="submit"
-        >
-          Relancer une partie
-        </button>
-      </form>
-    </div>
-    {{end}}
-
-    <h1>{{.Title}}</h1>
-    <div class="game noselect">
-      {{if eq .PlayerToPlay 1}}
-      <div class="slot slot__big slot__{{(index .Players 0).Slot}}"></div>
-      {{end}} {{if eq .PlayerToPlay 2}}
-      <div class="slot slot__big slot__{{(index .Players 1).Slot}}"></div>
-      {{end}}
-
-      <form class="game__actions" action="/placeLine" method="post">
-        {{if index .IsLineFull 0}}
-        <button class="btn btn--black btn__disabled" disabled>1</button>
-        {{else}}
-        <button class="btn btn--black" name="line_btn" value="1" type="submit">
-          1
-        </button>
-        {{end}} {{if index .IsLineFull 1}}
-        <button class="btn btn--black btn__disabled" disabled>2</button>
-        {{else}}
-        <button class="btn btn--black" name="line_btn" value="2" type="submit">
-          2
-        </button>
-        {{end}} {{if index .IsLineFull 2}}
-        <button class="btn btn--black btn__disabled" disabled>3</button>
-        {{else}}
-        <button class="btn btn--black" name="line_btn" value="3" type="submit">
-          3
-        </button>
-        {{end}} {{if index .IsLineFull 3}}
-        <button class="btn btn--black btn__disabled" disabled>4</button>
-        {{else}}
-        <button class="btn btn--black" name="line_btn" value="4" type="submit">
-          4
-        </button>
-        {{end}} {{if index .IsLineFull 4}}
-        <button class="btn btn--black btn__disabled" disabled>5</button>
-        {{else}}
-        <button class="btn btn--black" name="line_btn" value="5" type="submit">
-          5
-        </button>
-        {{end}} {{if index .IsLineFull 5}}
-        <button class="btn btn--black btn__disabled" disabled>6</button>
-        {{else}}
-        <button class="btn btn--black" name="line_btn" value="6" type="submit">
-          6
-        </button>
-        {{end}} {{if index .IsLineFull 6}}
-        <button class="btn btn--black btn__disabled" disabled>7</button>
-        {{else}}
-        <button class="btn btn--black" name="line_btn" value="7" type="submit">
-          7
-        </button>
-        {{end}}
-      </form>
-
-      <div class="game__content">
-        {{range $row := .Rows}}
-        <div class="slots">
-          {{range $item := $row}} {{if eq $item.Player 0}}
-          <div class="slot slot__empty"></div>
-          {{end}} {{if eq $item.Player 1}}
-          <div class="slot slot__{{(index $.Players 0).Slot}}"></div>
-          {{end}} {{if eq $item.Player 2}}
-          <div class="slot slot__{{(index $.Players 1).Slot}}"></div>
-          {{end}} {{end}}
+            <form action="/newGame" method="post">
+                <button
+                    class="btn btn--white appear__anim--btn"
+                    name="newgame_btn"
+                    value=""
+                    type="submit"
+                >
+                    Relancer une partie
+                </button>
+            </form>
         </div>
         {{end}}
-      </div>
 
-      <a class="btn btn--white" href="/">Revenir au menu</a>
-    </div>
-  </body>
+        <!-- If there's a draw -->
+        {{if .Win.IsDraw}}
+        <div class="popup noselect">
+            <h1 class="appear__anim">Match nul, dommage !</h1>
+
+            <form action="/newGame" method="post">
+                <button
+                    class="btn btn--white appear__anim--btn"
+                    name="newgame_btn"
+                    value=""
+                    type="submit"
+                >
+                    Relancer une partie
+                </button>
+            </form>
+        </div>
+        {{end}}
+
+        <h1>{{.Title}}</h1>
+        <div class="game noselect">
+            <!-- --
+            <form class="game__actions" action="/placeLine" method="post">
+                {{if index .IsLineFull 0}}
+                <button class="btn btn--black btn__disabled" disabled>1</button>
+                {{else}}
+                <button
+                    class="btn btn--black"
+                    name="line_btn"
+                    value="1"
+                    type="submit"
+                >
+                    1
+                </button>
+                {{end}} {{if index .IsLineFull 1}}
+                <button class="btn btn--black btn__disabled" disabled>2</button>
+                {{else}}
+                <button
+                    class="btn btn--black"
+                    name="line_btn"
+                    value="2"
+                    type="submit"
+                >
+                    2
+                </button>
+                {{end}} {{if index .IsLineFull 2}}
+                <button class="btn btn--black btn__disabled" disabled>3</button>
+                {{else}}
+                <button
+                    class="btn btn--black"
+                    name="line_btn"
+                    value="3"
+                    type="submit"
+                >
+                    3
+                </button>
+                {{end}} {{if index .IsLineFull 3}}
+                <button class="btn btn--black btn__disabled" disabled>4</button>
+                {{else}}
+                <button
+                    class="btn btn--black"
+                    name="line_btn"
+                    value="4"
+                    type="submit"
+                >
+                    4
+                </button>
+                {{end}} {{if index .IsLineFull 4}}
+                <button class="btn btn--black btn__disabled" disabled>5</button>
+                {{else}}
+                <button
+                    class="btn btn--black"
+                    name="line_btn"
+                    value="5"
+                    type="submit"
+                >
+                    5
+                </button>
+                {{end}} {{if index .IsLineFull 5}}
+                <button class="btn btn--black btn__disabled" disabled>6</button>
+                {{else}}
+                <button
+                    class="btn btn--black"
+                    name="line_btn"
+                    value="6"
+                    type="submit"
+                >
+                    6
+                </button>
+                {{end}} {{if index .IsLineFull 6}}
+                <button class="btn btn--black btn__disabled" disabled>7</button>
+                {{else}}
+                <button
+                    class="btn btn--black"
+                    name="line_btn"
+                    value="7"
+                    type="submit"
+                >
+                    7
+                </button>
+                {{end}}
+            </form>
+            -->
+
+            <div>
+                <div class="mouse__coin--restrictor">
+                    <div
+                        id="mouse__coin"
+                        class="slot slot__{{(index .Players (minus .PlayerToPlay 1)).Slot}}"
+                        style="margin-left: calc(46%)"
+                    ></div>
+                </div>
+
+                <div class="game__content">
+                    <form
+                        class="game__actions"
+                        action="/placeLine"
+                        method="post"
+                    >
+                        <button
+                            name="line_btn"
+                            value="1"
+                            type="submit"
+                            {{if
+                            index
+                            .IsLineFull
+                            0}}disabled{{end}}
+                        ></button>
+                        <button
+                            name="line_btn"
+                            value="2"
+                            type="submit"
+                            {{if
+                            index
+                            .IsLineFull
+                            1}}disabled{{end}}
+                        ></button>
+                        <button
+                            name="line_btn"
+                            value="3"
+                            type="submit"
+                            {{if
+                            index
+                            .IsLineFull
+                            2}}disabled{{end}}
+                        ></button>
+                        <button
+                            name="line_btn"
+                            value="4"
+                            type="submit"
+                            {{if
+                            index
+                            .IsLineFull
+                            3}}disabled{{end}}
+                        ></button>
+                        <button
+                            name="line_btn"
+                            value="5"
+                            type="submit"
+                            {{if
+                            index
+                            .IsLineFull
+                            4}}disabled{{end}}
+                        ></button>
+                        <button
+                            name="line_btn"
+                            value="6"
+                            type="submit"
+                            {{if
+                            index
+                            .IsLineFull
+                            5}}disabled{{end}}
+                        ></button>
+                        <button
+                            name="line_btn"
+                            value="7"
+                            type="submit"
+                            {{if
+                            index
+                            .IsLineFull
+                            6}}disabled{{end}}
+                        ></button>
+                    </form>
+
+                    {{range $row := .Rows}}
+                    <div class="slots">
+                        {{range $item := $row}} {{if eq $item.Player 0}}
+                        <div class="slot slot__empty"></div>
+                        {{end}} {{if eq $item.Player 1}}
+                        <div
+                            class="slot slot__{{(index $.Players 0).Slot}}"
+                        ></div>
+                        {{end}} {{if eq $item.Player 2}}
+                        <div
+                            class="slot slot__{{(index $.Players 1).Slot}}"
+                        ></div>
+                        {{end}} {{end}}
+                    </div>
+                    {{end}}
+                </div>
+            </div>
+
+            <a class="btn btn--white" href="/">Revenir au menu</a>
+        </div>
+    </body>
 </html>
